[OPENMEETINGS-2800] build should be fixed